adicionando documentação para listOpenigsHandler
