# handler/response.go
@@ -45,3 +45,7 @@ type ShowOpeningResponse struct {
 	Message string                 `json:"message"`
 	Data    schema.OpeningResponse `json:"data"`
 }
+type ListOpeningsResponse struct {
+	Message string                   `json:"message"`
+	Data    []schema.OpeningResponse `json:"data"`
+}
